Bug 134930 - UI: Remaining space in Table Columns Tab should be a read-only field
Summary: UI: Remaining space in Table Columns Tab should be a read-only field
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: Writer-Table-Properties-Dialog
  Show dependency treegraph
 
Reported: 2020-07-18 13:01 UTC by Telesto
Modified: 2020-08-05 07:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (9.36 KB, application/vnd.oasis.opendocument.text)
2020-07-18 13:02 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-07-18 13:01:53 UTC
Description:
UI: Remaining space in Table Column Tab should be an read-only field 

Steps to Reproduce:
1. Open the attached file
2. Table -> Properties -> Column Tab
3. Modify Remaining Space -> Nothing happens -> Should be so (I assume)

Actual Results:
You can edit the Modify Remaining Space, but nothing happens

Expected Results:
Should be read only?


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: d851a02df57ab378ed0cc6d9362516de09c3279c
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-07-18 13:02:06 UTC
Created attachment 163235 [details]
Example file
Comment 2 Heiko Tietze 2020-07-20 11:33:56 UTC
Use a width < page width (might require to set alignment to something else but automatic) and change the remaining space value in the column field (might require to reduce the width of one column). Also check "Adapt table width" and read the manual. 

I don't see a benefit from making the remaining space readonly.
Comment 3 Telesto 2020-07-20 12:01:32 UTC
(In reply to Heiko Tietze from comment #2)
> Use a width < page width (might require to set alignment to something else
> but automatic) and change the remaining space value in the column field
> (might require to reduce the width of one column). Also check "Adapt table
> width" and read the manual. 
> 
> I don't see a benefit from making the remaining space readonly.

It's easier if you give an step by example where you can actually do something with the "Remaining Space" box. Tried number of options.. Still not seeing what it supposed to do

"**Displays** the amount of space that is available for adjusting the width of the columns"
Comment 4 Heiko Tietze 2020-07-21 12:58:10 UTC
(In reply to Telesto from comment #3)
> It's easier if you give an step by example where you can actually do
> something with the "Remaining Space" box.

Use cases:
* Insert a 2x2 table via toolbar widget and adjust the column width to be equally 2cm (check adapt table width in order to increase the remaining space)
* Insert a 2x2 table via toolbar widget and adjust it to be 10cm large with 2/3 for the right column (uncheck adjust table width, enter 5cm at col #2, enter 10cm at remaining space, which is adjusted to 9,4)
* enlarge an existing table while keeping the column width equal (check Adjust columns.. and step up/down to increase all columns with cost on the remaining space)
Comment 5 Telesto 2020-07-21 14:22:43 UTC
(In reply to Heiko Tietze from comment #4)
> (In reply to Telesto from comment #3)
> > It's easier if you give an step by example where you can actually do
> > something with the "Remaining Space" box.
> 
> Use cases:
> * Insert a 2x2 table via toolbar widget and adjust the column width to be
> equally 2cm (check adapt table width in order to increase the remaining
> space)
> * Insert a 2x2 table via toolbar widget and adjust it to be 10cm large with
> 2/3 for the right column (uncheck adjust table width, enter 5cm at col #2,
> enter 10cm at remaining space, which is adjusted to 9,4)
> * enlarge an existing table while keeping the column width equal (check
> Adjust columns.. and step up/down to increase all columns with cost on the
> remaining space)

I'm maybe ambiguous with my request. The Remaining Space part doesn't allow input. So with read-only I mean; don't take user input. It should still respond to changes made in the column part


The middle I don't get; or doesn't work for me. Screencast would be helpful :-)
Comment 6 Heiko Tietze 2020-07-21 14:37:29 UTC
(In reply to Telesto from comment #5)
> I'm maybe ambiguous with my request.

So let's resolve.

> Screencast would be helpful

...to see me entering numbers? ;-)
Comment 7 Telesto 2020-07-21 14:57:24 UTC
(In reply to Heiko Tietze from comment #6)
> (In reply to Telesto from comment #5)
> > I'm maybe ambiguous with my request.
> 
> So let's resolve.
> 
> > Screencast would be helpful
> 
> ...to see me entering numbers? ;-)

Hold on: this isn't invitation to close. And of course seeing you entering numbers. Especially related to the remaining spacing field. :-). As if I read correctly you say it has influence on the columns.. which I say it doesn't and you say it does.. 

And in some cases you tend to assume it's working that way.. Or now it worked that way, but you didn't try it recently.. The whole table size/ columns size thing is rather quirky. And I have to ask UX few times as this is the design for 10 years at minimum. So I can't bibisect it to a certain point.

Except its surely flawed in multitude of ways.
Comment 8 Heiko Tietze 2020-07-21 15:00:56 UTC
(In reply to Telesto from comment #7)
> The whole table size/ columns size thing is rather quirky.

Agreed, but the topic is whether or not the remaining space field should be read only and I gave examples where it is useful. Open for other opinions, of course.
Comment 9 Telesto 2020-07-21 15:12:01 UTC
@Mike
In need for a vision of third person. Remaining Space is input field, without doing anything. So I argue to make it read-only (or change it some way it does something useful)
Comment 10 Mike Kaganski 2020-07-21 17:01:04 UTC
This is a regression.

In v.3.3, the field was read-only (although selectable). It didn't allow changing its value directly (neither by typing, nor by using mouse wheel, arrow keys, or PgUp/PgDn). Note that using wheel when mouse pointer was over that field, but keyboard cursor was in a column width field (with "Adapt table width" checked), looked as if it changed the remaining size, but actually changed it only indirectly via changing the active column width.

In v.5.4, it also didn't accept typing - but it accepted arrow keys, PgUp/PgDn, and wheel.

In current version (7.0.0.2) it now has spin buttons, and accepts typing.

All that direct input is not handled in code, and is of course wrong. It must be read-only, just as e.g. old About dialog's data (selectable, but not directly modifiable).
Comment 11 Heiko Tietze 2020-07-22 12:40:36 UTC
Clean-up ux-advice from CC since keyword was removed.

(In reply to Mike Kaganski from comment #10)
> All that direct input is not handled in code...

Woot? See comment 4
Comment 12 Mike Kaganski 2020-07-22 12:44:45 UTC
(In reply to Heiko Tietze from comment #11)
> Woot? See comment 4

The comment 4 does *not* mention anything about using the control in question. You just declared that your words somehow related to the topic, without specific steps.

Please write something like:

1. ...
2. ...
...
N. Put cursor to "Remaining space" edit box, enter X...
...

So that it would be obvious at which stage the editable state of the control was useful, and created a difference.
Comment 13 Thomas Lendo 2020-08-02 19:48:40 UTC
(In reply to Mike Kaganski from comment #10)
> In v.5.4, it also didn't accept typing - but it accepted arrow keys,
> PgUp/PgDn, and wheel.
I can type in (in 5.0 and newer versions) but it has no effect for the table. After closing and reopening the dialog then the original value is visible.

> In current version (7.0.0.2) it now has spin buttons, and accepts typing.
Also in 6.3 with spin buttons.

> All that direct input is not handled in code, and is of course wrong. It
> must be read-only, just as e.g. old About dialog's data (selectable, but not
> directly modifiable).
+1
Read-only field without spin buttons.
Comment 14 Telesto 2020-08-04 10:18:53 UTC
@Caolan
As are already looking into they table dialog code, you might be interested in this
Comment 15 Mike Kaganski 2020-08-04 10:20:42 UTC
(In reply to Telesto from comment #14)

This is just an easy hack, which Heiko can help with providing code pointers.
Comment 16 Commit Notification 2020-08-04 20:16:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5eb43d74e1aea8eebb67e2d9e98335a1c5d81248

tdf#134930 remaining space is for display only purposes

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.