tdf#134930 remaining space is for display only purposes

use a label instead, keep spinbutton (but invisible) to format the label

Change-Id: I36660566df34891e8e813dee24375eacf55e09d3